--- a/components/libjpeg/CMakeLists.txt
+++ b/components/libjpeg/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "libjpeg.c"
                     INCLUDE_DIRS "."
-                    PRIV_REQUIRES src spiffs)
+                    PRIV_REQUIRES esp_timer einkdrv spiffs)
