--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "esp32_deskclock.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "esp32_deskclock.c" "ble_time_sync.c"
+                    INCLUDE_DIRS "."
+                    REQUIRES driver nvs_flash bt esp_driver_i2c einkdrv pcf8563)
